--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
           </nav>
           <form class="header__form" action="">
             <label class="label" for="header__search"> Search </label>
-            <input class="header__search" type="search" name="search" placeholder="Search product here...">
+            <input id="header__search" class="header__search" type="search" name="search" placeholder="Search product here...">
             <button class="header__search-btn" type="search">Search</button>
           </form>
         </div>
@@ -93,7 +93,7 @@
           <a class="search__btn" href="#">Popular Products</a>
           <form class="search__form">
             <label class="label" for="search__search">search</label>
-            <input class="search__search" type="search" name="search" placeholder="Search your products...">
+            <input id="search__search" class="search__search" type="search" name="search" placeholder="Search your products...">
             <div class="search__options-wrapper">
               <label class="label" for="search__options">search__options</label>
               <select class="search__options" name="categories">
@@ -825,7 +825,81 @@
 
     <section class="reasons">
       <div class="container">
-        
+        <div class="reasons__top">
+          <div class="reasons__title">
+            Why Choose <span class="reasons__title reasons__title--blue">MartPlace</span>
+          </div>
+          <p class="reasons__text">
+            Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
+          </p>
+        </div>
+        <div class="reasons__inner">
+          <div class="reasons__item">
+            <span class="reasons__item-title">
+              One Time Payment
+            </span>
+            <p class="reasons__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </p>
+          </div>
+
+          <div class="reasons__item reasons__item--second">
+            <span class="reasons__item-title reasons__item-title--quality">
+              Quality Products
+            </span>
+            <p class="reasons__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </p>
+          </div>
+
+          <div class="reasons__item reasons__item--third">
+            <span class="reasons__item-title reasons__item-title--security">
+              100% Secure Payment
+            </span>
+            <p class="reasons__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </p>
+          </div>
+
+          <div class="reasons__item reasons__item--fourth">
+            <span class="reasons__item-title reasons__item-title--code">
+              Well Organized Code
+            </span>
+            <p class="reasons__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </p>
+          </div>
+
+          <div class="reasons__item reasons__item--fifth">
+            <span class="reasons__item-title reasons__item-title--update">
+              Life Time Free Update
+            </span>
+            <p class="reasons__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </p>
+          </div>
+
+          <div class="reasons__item reasons__item--sixth">
+            <span class="reasons__item-title reasons__item-title--support">
+              Fast and Friendly Support
+            </span>
+            <p class="reasons__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
