--- a/app/index.html
+++ b/app/index.html
@@ -933,6 +933,118 @@
           </div>
         </div>
       </section>
+
+      <section class="feedback">
+        <div class="container">
+          <!-- <div class="feedback__info">
+            <span class="feedback__title">
+              Our Clients <span class="feedback__title--blue">Feedback</span>
+            </span>
+            <p class="feedback__text">
+
+            </p>
+          </div> -->
+
+          <div class="reasons__top">
+            <div class="reasons__title">
+              Our Clients <span class="reasons__title reasons__title--blue">Feedback</span>
+            </div>
+            <p class="reasons__text">
+              Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
+            </p>
+          </div>
+          <div class="feedback__inner">
+            <div class="feedback__item feedback__item--left">
+              <div class="feedback__item-top">
+                <img class="feedback__avatar" src="images/content/feedback-ava.jpg" alt="avatar">
+                <div class="feedback__client">
+                  <span class="feedback__name">
+                    Taofiqul Hakim
+                  </span>
+                  <span class="feedback__status">
+                    Product Designer
+                  </span>
+                </div>
+              </div>
+              <div class="feedback__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet diam congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum is mollis. Praesent the pharetra, justo ut scelerisque.
+              </div>
+            </div>
+            <div class="feedback__item">
+              <div class="feedback__item-top">
+                <img class="feedback__avatar" src="images/content/feedback-ava.jpg" alt="avatar">
+                <div class="feedback__client">
+                  <span class="feedback__name">
+                    Saifullah Al Murtafee
+                  </span>
+                  <span class="feedback__status">
+                    Product Designer
+                  </span>
+                </div>
+              </div>
+              <div class="feedback__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam aliquet diam congue is the laoreet elit metus. Nunc placerat is mi id nisi interdum is mollis. Praesent the pharetra, justo ut scelerisque.
+              </div>
+            </div>
+
+          </div>
+          <a class="feedback__btn" href="#">
+            View All Reviews
+          </a>
+        </div>
+      </section>
+
+      <section class="news">
+        <div class="container">
+          <div class="reasons__top">
+            <div class="reasons__title">
+              Latest <span class="reasons__title reasons__title--blue">News</span>
+            </div> 
+            <p class="reasons__text">
+              Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
+            </p>
+          </div>
+          <div class="news__inner">
+            <div class="news__item">
+              <img class="news__img" src="images/content/news-img.jpg" alt="img">
+              <div class="news__content">
+                <div class="news__top">
+                  <span class="news__title">Web Design Trends in 2017</span>
+                  <p class="news__text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    the mattis, leo quam aliquet congue.
+                  </p>
+                </div>
+                <div class="news__bottom">
+                  <time class="news__date">
+                    24 Feb 2017
+                  </time>
+                  <a class="news__comments" href="#">
+                    45
+                  </a>
+                  <span class="news__views">
+                    345
+                  </span>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="advantages">
+        <div class="container">
+          <div class="advantages__inner">
+            <div class="advantages__item">
+              <span class="advantages__text">30 Days Money Back <a class="advantages__link" href="#">Guarantee</a></span>
+            </div>
+            <div class="advantages__item">
+              <span class="advantages__text">30 Days Money Back <a class="advantages__link" href="#">Guarantee</a></span>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </div>
 
