--- a/app/index.html
+++ b/app/index.html
@@ -1027,7 +1027,54 @@
                   </span>
                 </div>
               </div>
-              
+            </div>
+
+            <div class="news__item">
+              <img class="news__img" src="images/content/news-img2.jpg" alt="img">
+              <div class="news__content">
+                <div class="news__top">
+                  <span class="news__title">The best advices to start your 
+                    own project</span>
+                  <p class="news__text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                  </p>
+                </div>
+                <div class="news__bottom">
+                  <time class="news__date">
+                    24 Feb 2017
+                  </time>
+                  <a class="news__comments" href="#">
+                    45
+                  </a>
+                  <span class="news__views">
+                    345
+                  </span>
+                </div>
+              </div>
+            </div>
+
+            <div class="news__item">
+              <img class="news__img" src="images/content/news-img3.jpg" alt="img">
+              <div class="news__content">
+                <div class="news__top">
+                  <span class="news__title">Best Related Post Plugin</span>
+                  <p class="news__text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                    the mattis, leo quam aliquet congue.
+                  </p>
+                </div>
+                <div class="news__bottom">
+                  <time class="news__date">
+                    24 Feb 2017
+                  </time>
+                  <a class="news__comments" href="#">
+                    45
+                  </a>
+                  <span class="news__views">
+                    345
+                  </span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -1036,11 +1083,11 @@
       <section class="advantages">
         <div class="container">
           <div class="advantages__inner">
-            <div class="advantages__item">
+            <div class="advantages__item advantages__item--border">
               <span class="advantages__text">30 Days Money Back <a class="advantages__link" href="#">Guarantee</a></span>
             </div>
             <div class="advantages__item">
-              <span class="advantages__text">30 Days Money Back <a class="advantages__link" href="#">Guarantee</a></span>
+              <span class="advantages__text advantages__text--support">Fast and Friendly <a class="advantages__link advantages__link--purple" href="#">Support</a></span>
             </div>
           </div>
         </div>
