add section-join and created BEM block

--- a/app/index.html
+++ b/app/index.html
@@ -827,11 +827,11 @@
   
       <section class="reasons">
         <div class="container">
-          <div class="reasons__top">
-            <div class="reasons__title">
-              Why Choose <span class="reasons__title reasons__title--blue">MartPlace</span>
+          <div class="reasons__top section-intro">
+            <div class="section-intro__title">
+              Why Choose <span class="section-intro__title section-intro__title--blue">MartPlace</span>
             </div>
-            <p class="reasons__text">
+            <p class="section-intro__text">
               Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
             </p>
           </div>
@@ -936,20 +936,11 @@
 
       <section class="feedback">
         <div class="container">
-          <!-- <div class="feedback__info">
-            <span class="feedback__title">
-              Our Clients <span class="feedback__title--blue">Feedback</span>
-            </span>
-            <p class="feedback__text">
-
-            </p>
-          </div> -->
-
-          <div class="reasons__top">
-            <div class="reasons__title">
-              Our Clients <span class="reasons__title reasons__title--blue">Feedback</span>
+          <div class="feedback__top section-intro">
+            <div class="section-intro__title">
+              Our Clients <span class="section-intro__title section-intro__title--blue">Feedback</span>
             </div>
-            <p class="reasons__text">
+            <p class="section-intro__text">
               Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
             </p>
           </div>
@@ -996,11 +987,11 @@
 
       <section class="news">
         <div class="container">
-          <div class="reasons__top">
-            <div class="reasons__title">
-              Latest <span class="reasons__title reasons__title--blue">News</span>
+          <div class="news__intro section-intro">
+            <div class="section-intro__title">
+              Latest <span class="section-intro__title section-intro__title--blue">News</span>
             </div> 
-            <p class="reasons__text">
+            <p class="section-intro__text">
               Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
             </p>
           </div>
@@ -1092,7 +1083,27 @@
           </div>
         </div>
       </section>
+
+      <section class="join">
+        <div class="container">
+          <span class="join__title">
+            Ready to Join Our Marketplace!
+          </span>
+          <p class="join__text">
+            Over 25,000 designers and developers trust the MartPlace.
+          </p>
+          <a class="join__link" href="#">
+            Join Us Today
+          </a>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        
+      </div>
+    </footer>
   </div>
 
 
